# Dork

./: CHANGELOG.md  CREDITS.md  Cargo.toml  IMPROVEMENTS.md  README.md  README_SECURITY.txt  SECURITY.md  UI_IMPROVEMENTS.md  VIRUS_FREE_CERTIFICATE.txt  build.sh  build_executable.sh  requirements.txt  swiss_army.db  swiss_army_suite.py
src/: advanced_dorks.rs  config.rs  crypto_tools.rs  database.rs  dns_tools.rs  dork_checker.rs  main.rs  network_tools.rs  sql_scanner.rs  ui_effects.rs  web_tools.rs
