[package]
name = "legend-dorker"
version = "3.0.0"
edition = "2021"
authors = ["@LEGEND_BL <sarthakgrid1@gmail.com>"]
description = "Advanced Security & OSINT Toolkit"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "cookies", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
urlencoding = "2.1"
rusqlite = { version = "0.30", features = ["bundled"] }
colored = "2.1"
base64 = "0.21"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
scraper = "0.18"
url = "2.5"
indicatif = "0.17"
rayon = "1.8"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
sha2 = "0.10"
md5 = "0.7"
hex = "0.4"
rand = "0.8"
crossterm = "0.27"
console = "0.15"
dialoguer = "0.11"
trust-dns-resolver = "0.23"
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
